# nccucscomputergraphcourse

TestMakeATriangle/: TestMakeATriangle.cbp  TestMakeATriangle.depend  TestMakeATriangle.layout  main.cpp
hw/hw-ray-step2/: hw-ray-step2-main.cpp  main.cpp  vec3.h
hw/hw-swgl-1/: hw-swgl-1.ppt
hw/hw-swgl-1/hw-swgl-1/: CMakeLists.txt  cghw1.cbp  cghw1.depend  cghw1.layout  hw1.cpp  swgl.cpp  swgl.h
hw/hw-swgl-1/hw-swgl-1/vc2005/: cghw1.vcproj
hw/hw-swgl-1/hw-swgl-1/vc2010/: cghw.sln  cghw.vcxproj
hw/hw-swgl-2/: hw-swgl-2.ppt
hw/hw-swgl-2/cghw2-s/: CMakeLists.txt  cghw2.cbp  cghw2.depend  cghw2.layout  hw2.cpp  swgl-hw2.cpp  swgl.cpp  swgl.h
hw/hw-swgl-2/cghw2-s/vc2005/: cghw2.sln  cghw2.vcproj  hw2.dev
hw/hw-swgl-2/cghw2-s/vc2010/: cghw.vcxproj
hw/hw1/hw1-ppm/: CMakeLists.txt  main.cpp  vec3.h
hw/hw1/hw1-王品/hw1/: main.cpp  ray.h  vec3.h
hw/期中訂正/HW4育淞參考/: hw2.cpp  swgl-hw2.cpp  swgl.cpp  swgl.h
openglcode/cglab1/cglab1/: CMakeLists.txt
openglcode/cglab1/cglab1/gasket1/: gasket.cbp  gasket.cpp
openglcode/cglab1/cglab1/gasket1-shader/: Angel.h  README.txt  example1.cbp  example1.cpp  mat.h
openglcode/cglab1/cglab1/gasket2/: gasket.cbp  gasket2.cpp
openglcode/cglab1/cglab1/gasket3/: gasket.cbp  gasket3.cpp
openglcode/cglab1/cglab1/glut/: glut.cbp
swgl2sample/: swgl2sample.cbp  swgl2sample.layout
swglhw1project/: swglhw1project.cbp  swglhw1project.depend  swglhw1project.layout
